--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "app-root-path": "^3.0.0",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
