--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3001
-DATABASE_URL=mongodb://localhost:27017/exam
+DBURL=mongodb+srv://jorge:2012@cluster0.ymmi6.mongodb.net/exam?retryWrites=true&w=majority
 JWT_SECRET=Jorge
 JWT_ALGORITHM=HS256
 BCRYPT_ROUNDS=10
